iceberg/iceberg-handler/src/test/queries/negative/get_variant_index_out_of_bound.q
SELECT variant_get(parse_json('[1, 2, 3]'), '$[5]');